--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
     <link rel="manifest" href="/manifest.json" />
     
     <!-- Favicon -->
-    <link rel="icon" type="image/svg+xml" href="/barber-icon.svg" />
-    <link rel="shortcut icon" href="/barber-icon.svg" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="shortcut icon" href="/favicon.svg" />
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
