fix: corrigido erros de manifest.json e queries desnecessÃ¡rias
- Removido meta tag deprecated 'apple-mobile-web-app-capable'
- Atualizado theme-color para azul (#3b82f6) no index.html e manifest.json
- Corrigido erro 406 do Supabase - queries sendo feitas desnecessariamente
- Modificado useBooking para sÃ³ fazer queries quando modal estiver aberto
- Modificado useDataSync para nÃ£o fazer queries quando barbershopId for null
- Adicionado validaÃ§Ã£o em getAllBarberSchedules para evitar queries invÃ¡lidas
- BookingModal agora sÃ³ carrega dados quando necessÃ¡rio (open=true)
- VersÃ£o atualizada para V 1.0.68
- Build funcionando corretamente

--- a/index.html
+++ b/index.html
@@ -17,12 +17,11 @@
     <meta name="twitter:image" content="/barber-logo.png" />
     
     <!-- PWA Meta Tags -->
-    <meta name="theme-color" content="#f59e0b" />
+    <meta name="theme-color" content="#3b82f6" />
     <meta name="mobile-web-app-capable" content="yes" />
-    <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="default" />
     <meta name="apple-mobile-web-app-title" content="BarberTime" />
-    <meta name="msapplication-TileColor" content="#f59e0b" />
+    <meta name="msapplication-TileColor" content="#3b82f6" />
     <meta name="msapplication-tap-highlight" content="no" />
     
     <!-- PWA Manifest -->
